--- a/app/scss/components/modules/_skills.scss
+++ b/app/scss/components/modules/_skills.scss
@@ -6,6 +6,14 @@
         justify-content: space-between;
     }
 
+    .m-skills__column {
+        margin: 0 auto;
+
+        @include media-up('_l') {
+            margin: 0;
+        }
+    }
+
     .a-heading {
         margin: 0 auto;
     }
@@ -13,6 +21,7 @@
     &__item {
         position: relative;
         min-width: 285px;
+        min-height: 350px;
         flex-direction: column;
         align-items: flex-start;
 
